# LAION-C

./: .gitignore  LICENSE  README.md  pyproject.toml
distortions/: apply_distortions.py  custom_dataset.py
laionc/: Imagenetc_class.py  __init__.py  config.py  data.py  evaluation.py
laionc/mappings/: category_mapping.json
